worked on SavedView and ProfileView
Also some small changes across other files, new constant and added links to register/login under login/register.
And oh yeah, now tab has a proper icon.

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/assets/images/one.png" />
+  <link rel="icon" href="%PUBLIC_URL%/assets/images/icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Find all of the public transports on one site" />
